--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "Keymaps"
     ],
     "activationEvents": [
+        "onLanguage:tex",
         "onLanguage:latex",
+        "onLanguage:doctex",
         "onCommand:latex-utils.wrapBold",
         "onCommand:latex-utils.wrapItalic",
         "onCommand:latex-utils.wrapUnderline",
